--- a/backend/package.json
+++ b/backend/package.json
@@ -1,1 +1,21 @@
-{"scripts":{"dev":"ts-node-dev --respawn src/index.ts","start":"node dist/index.js","build":"tsc"},"dependencies":{"cors":"^2.8.5","dotenv":"^17.2.1","express":"^5.1.0"},"devDependencies":{"@types/cors":"^2.8.19","@types/express":"^5.0.3","@types/node":"^24.2.0","prisma":"^6.13.0","ts-node-dev":"^2.0.0","typescript":"^5.9.2"}}
+{
+  "scripts": {
+    "dev": "ts-node-dev --respawn src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc"
+  },
+  "dependencies": {
+    "@clerk/express": "^1.7.15",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.2.0",
+    "prisma": "^6.13.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.2"
+  }
+}
