--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,16 @@
   "dependencies": {
     "@clerk/express": "^1.7.15",
     "@prisma/client": "^6.13.0",
+    "bullmq": "^5.56.9",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "ioredis": "^5.7.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/ioredis": "^4.28.10",
     "@types/node": "^24.2.0",
     "prisma": "^6.13.0",
     "ts-node-dev": "^2.0.0",
