--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@clerk/express": "^1.7.15",
     "@prisma/client": "^6.13.0",
+    "axios": "^1.11.0",
     "bullmq": "^5.56.9",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -14,6 +15,7 @@
     "ioredis": "^5.7.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/ioredis": "^4.28.10",
