--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "@prisma/client": "^6.8.2",
+    "@radix-ui/react-separator": "^1.1.7",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
