--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.36.5",
     "@next/font": "^14.2.15",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-separator": "^1.1.7",
@@ -17,7 +18,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
     "next": "^15.5.3",
-    "next-auth": "^4.24.11",
+
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
