--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,16 @@
     "@next/font": "^14.2.15",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.536.0",
     "next": "^15.5.3",
-
     "prisma": "^6.8.2",
     "react": "^19.0.0",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
   },
